ipad login button issues not visible - fixed

--- a/src/sass/global/_header.scss
+++ b/src/sass/global/_header.scss
@@ -483,7 +483,7 @@ header {
                     background-color: #4c5161;
                     margin-bottom: 0;
                     margin-right: 0;
-                    position: fixed;
+                    position: absolute;
                     bottom: 0;
                     -webkit-backface-visibility: hidden;
                     width: 100%;
